Fix rounds selection issues.

--- a/review.classdesign.jammy/problem.template.html
+++ b/review.classdesign.jammy/problem.template.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<!-- TODO : Adds google JAM CSS here -->
+		<link rel="stylesheet" type="text/css" href="/codejam/contest/css/35/base.css" />
+		<link rel="stylesheet" type="text/css" href="/codejam/contest/css/35/dashboard.css" />
 	</head>
 	<body>
 		%s
