--- a/review.classdesign.jammy/problem.template.html
+++ b/review.classdesign.jammy/problem.template.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="/codejam/contest/css/35/base.css" />
-		<link rel="stylesheet" type="text/css" href="/codejam/contest/css/35/dashboard.css" />
+		<link rel="stylesheet" type="text/css" href="https://code.google.com/codejam/contest/css/35/base.css" />
+		<link rel="stylesheet" type="text/css" href="https://code.google.com/codejam/contest/css/35/dashboard.css" />
 	</head>
 	<body>
 		%s
