Updates documentation page

--- a/documentation.html
+++ b/documentation.html
@@ -4,4 +4,34 @@ title:	"Documentation"
 ---
 <div class="container padded">
   <h1>Documentation</h1>
+
+  <h2>Programming language selection</h2>
+
+  <div class="tabbed">
+    <p>
+      <b>Jammy</b> plugin is cross language, it could work
+      on any programming language as long as a language extension plugin
+      is installed. For selecting the language you wish to work with, go to
+      <tt>Preference > Jammy</tt> and select it through the proposed drop down
+      list.
+    </p>
+
+    <img class="img-responsive center" src="images/screenshot/preferences.png" />
+
+    <h3>Supported language(s)</h3>
+
+    <p>Here is a list of known language supported by Jammy :</p>
+
+    <div class="tabbed">
+      <h4>Java</h4>
+      <p>Java is the default language supported by Jammy. Indead Jammy is coded in Java, for a Java first based IDE.</p>
+    </div>
+
+    <br/>
+    <p>
+      You need another language ? Try to integrate it using the
+      <a href="https://github.com/Faylixe/review.classdesign.jammy/wiki/Adding-language-support-to-Jammy" target="_blank">Language extension API</a>
+      and we will add it to this list !
+    </p>
+  </div>
 </div>
