--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title:  "Jammy"
+title:  "Home"
 ---
 
 <div class="container padded centered">
+    <!-- TODO Consider adding a carousel. -->
     <img src="images/jammy.preview.png" class="preview center img-responsive" alt="Eclipse with Jammy"/>
-
 </div>
 
 <div class="blued">
@@ -15,7 +15,7 @@ title:  "Jammy"
       <a href="https://code.google.com/codejam" target="_blank">Google Code Jam</a> development.
     </p>
     <div class="row-fluid">
-      <div class="col-md-3 col-md-offset-1">
+      <div class="col-md-3 col-md-offset-1 feature">
         <img src="images/browser.png" class="img-responsive center" />
         <br/>
         <span class="medium">Custom perspective</span>
@@ -25,7 +25,7 @@ title:  "Jammy"
           submission monitoring, or contest explorer.
         </p>
       </div>
-      <div class="col-md-3 col-md-offset-1">
+      <div class="col-md-3 col-md-offset-1 feature">
         <img src="images/upload.png" class="img-responsive center" />
         <br/>
         <span class="medium">Automatic submission</span>
@@ -34,7 +34,7 @@ title:  "Jammy"
         <p>Downloads input, runs it, and uploads packaged output
           with source code without any effort.</p>
       </div>
-      <div class="col-md-3 col-md-offset-1">
+      <div class="col-md-3 col-md-offset-1 feature">
         <img src="images/compose.png" class="img-responsive center" />
         <br/>
         <span class="medium">Sample dataset extraction</span>
