--- a/installation.html
+++ b/installation.html
@@ -4,4 +4,9 @@ title:	"Installation"
 ---
 <div class="container padded">
   <h1>Installation</h1>
+
+  <h2>Update site</h2>
+
+  <p></p>
+  <h2>Manual</h2>
 </div>
