Updates Jammy site

--- a/documentation.html
+++ b/documentation.html
@@ -4,9 +4,17 @@ title:	"Documentation"
 ---
 <div class="container padded">
   <h1>Documentation</h1>
-
+  <h2>Where should i start ?</h2>
+  <br/>
+  <div class="tabbed">
+    <p>
+      Once <b>Jammy</b> is installed, you just have to switch to the associated perspective
+      using menu <tt>Window > Open perspective > Other</tt>. Then select a contest using menu
+      <tt>Jammy > Select contest</tt>. Authentification with your Google Account will be requested.
+    </p>
+  </div>
   <h2>Programming language selection</h2>
-
+  <br/>
   <div class="tabbed">
     <p>
       <b>Jammy</b> plugin is cross language, it could work
@@ -15,13 +23,12 @@ title:	"Documentation"
       <tt>Preference > Jammy</tt> and select it through the proposed drop down
       list.
     </p>
-
+    <br/>
     <img class="img-responsive center" src="images/screenshot/preferences.png" />
-
+    <br/>
     <h3>Supported language(s)</h3>
-
     <p>Here is a list of known language supported by Jammy :</p>
-
+    <br/>
     <div class="tabbed">
       <h4>Java</h4>
       <p>Java is the default language supported by Jammy. Indead Jammy is coded in Java, for a Java first based IDE.</p>
