--- a/installation.html
+++ b/installation.html
@@ -2,11 +2,48 @@
 layout: default
 title:	"Installation"
 ---
+
 <div class="container padded">
   <h1>Installation</h1>
+  <br/>
+    <p><b>Jammy</b> requires <a href="" target="_blank">Java 8</a> and <a href="" target="_blank">Eclipse Luna</a></p>
+</div>
 
-  <h2>Update site</h2>
+<div class="blued">
+  <div class="container padded">
+    <div class="row-fluid">
+      <div class="col-md-8">
+        <h3>Using update site</h3>
+        <br/>
+        <p>
+          First add <b>Jammy</b> repository : in <a href="http://eclipse.org" target="_blank">Eclipse</a>,
+          go to <tt>Help > Install new software...</tt>, click on <tt>Add</tt> button
+          to add the following url : <i>http://faylixe.github.io/review.classdesign.jammy/update</i> to the list.
+        </p>
+        <br/>
+        <p>
+          Now you can use this repository to install <b>Jammy</b> and all addons availables.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <a href="images/screenshot/update.png" target="-_blank"><img class="img-responsive" src="images/screenshot/update.png" /></a>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <p></p>
-  <h2>Manual</h2>
+<div class="container padded">
+  <div class="row-fluid">
+      <div class="col-md-4">
+        <a href="images/screenshot/manual.png" target="_blank"><img class="img-responsive" src="images/screenshot/manual.png" /></a>
+      </div>
+      <div class="col-md-8">
+        <h3>Manually</h3>
+        <br/>
+        <p>
+          You can also directly download plugins from <a href="" target="_blank">here</a>, and move it to
+          <a href="http://eclipse.org" target="_blank">Eclipse</a> plugin directory.
+        </p>
+      </div>
+    </div>
 </div>
