--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ title:  "Home"
     </ol>
     <div class="carousel-inner">
       <div class="item active">
-        <img src="images/preview-first.png" alt="Write solution quickly"/>
+        <img src="images/preview_first.png" alt="Write solution quickly"/>
       </div>
       <div class="item">
-        <img src="images/preview-second.png" alt="Easy debugging"/>
+        <img src="images/preview_second.png" alt="Easy debugging"/>
       </div>
     </div>
     <a class="carousel-control left" href="#preview" data-slide="prev">
