--- a/installation.html
+++ b/installation.html
@@ -18,15 +18,19 @@ title:	"Installation"
         <p>
           First add <b>Jammy</b> repository : in <a href="http://eclipse.org" target="_blank">Eclipse</a>,
           go to <tt>Help > Install new software...</tt>, click on <tt>Add</tt> button
-          to add the following url : <i>http://faylixe.github.io/review.classdesign.jammy/update</i> to the list.
+          to add the following url :
         </p>
+        <br/>
+        <div class="tabbed">
+          <p><i>http://faylixe.github.io/review.classdesign.jammy/update</i> to the list.</p>
+        </div>
         <br/>
         <p>
           Now you can use this repository to install <b>Jammy</b> and all addons availables.
         </p>
       </div>
       <div class="col-md-4">
-        <a href="images/screenshot/install_update.png" target="-_blank"><img class="img-responsive" src="images/screenshot/install_update.png" /></a>
+        <a href="images/install_update.png" target="-_blank"><img class="img-responsive" src="images/install_update.png" /></a>
       </div>
     </div>
   </div>
@@ -35,7 +39,7 @@ title:	"Installation"
 <div class="container padded">
   <div class="row-fluid">
       <div class="col-md-4">
-        <a href="images/screenshot/install_manual.png" target="_blank"><img class="img-responsive" src="images/screenshot/install_manual.png" /></a>
+        <a href="images/install_manual.png" target="_blank"><img class="img-responsive" src="images/install_manual.png" /></a>
       </div>
       <div class="col-md-8">
         <h3>Manually</h3>
