Updates installation page

--- a/installation.html
+++ b/installation.html
@@ -6,7 +6,11 @@ title:	"Installation"
 <div class="container padded">
   <h1>Installation</h1>
   <br/>
-    <p><b>Jammy</b> requires <a href="" target="_blank">Java 8</a> and <a href="" target="_blank">Eclipse Luna</a></p>
+    <p>
+      <b>Jammy</b> requires
+      <a href="https://www.java.com/fr/download/faq/java8.xml" target="_blank">Java 8</a>
+      and <a href="https://eclipse.org/luna/" target="_blank">Eclipse Luna</a>
+    </p>
 </div>
 
 <div class="blued">
@@ -18,11 +22,11 @@ title:	"Installation"
         <p>
           First add <b>Jammy</b> repository : in <a href="http://eclipse.org" target="_blank">Eclipse</a>,
           go to <tt>Help > Install new software...</tt>, click on <tt>Add</tt> button
-          to add the following url :
+          and enter the following url :
         </p>
         <br/>
         <div class="tabbed">
-          <p><i>http://faylixe.github.io/review.classdesign.jammy/update</i> to the list.</p>
+          <p><i>http://faylixe.github.io/review.classdesign.jammy/update</i></p>
         </div>
         <br/>
         <p>
@@ -30,7 +34,7 @@ title:	"Installation"
         </p>
       </div>
       <div class="col-md-4">
-        <a href="images/install_update.png" target="-_blank"><img class="img-responsive" src="images/install_update.png" /></a>
+        <a href="images/install_update.png" target="_blank"><img class="img-responsive" src="images/install_update.png" /></a>
       </div>
     </div>
   </div>
@@ -45,8 +49,9 @@ title:	"Installation"
         <h3>Manually</h3>
         <br/>
         <p>
-          You can also directly download plugins from <a href="" target="_blank">here</a>, and move it to
-          <a href="http://eclipse.org" target="_blank">Eclipse</a> plugin directory.
+          You can also directly download plugins from
+          <a href="https://github.com/Faylixe/review.classdesign.jammy/releases" target="_blank">here</a>,
+          and move it to <a href="http://eclipse.org" target="_blank">Eclipse</a> plugin directory.
         </p>
       </div>
     </div>
