--- a/installation.html
+++ b/installation.html
@@ -49,7 +49,7 @@ title:	"Installation"
         <h3>Manually</h3>
         <br/>
         <p>
-          You can also directly download plugins from
+          You can also directly download plugin from
           <a href="https://github.com/Faylixe/review.classdesign.jammy/releases" target="_blank">here</a>,
           and move it to <a href="http://eclipse.org" target="_blank">Eclipse</a> plugin directory.
         </p>
