Updates installation page

--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@ title:	"Documentation"
       list.
     </p>
     <br/>
-    <img class="img-responsive center" src="images/screenshot/preferences.png" />
+    <img class="img-responsive center" src="images/preferences.png" />
     <br/>
     <h3>Supported language(s)</h3>
     <p>Here is a list of known language supported by Jammy :</p>
