Updates installation page

--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,17 @@
 ---
 layout: default
-title:	"Documentation"
+title:	"FAQ"
 ---
 <div class="container padded">
-  <h1>Documentation</h1>
+  <h1>Frequently Asked Question</h1>
+  <div class="tabbed">
+    <ol>
+      <li><a href="">Where should i start ?</a></li>
+      <li><a href="">Programming language selection</a></li>
+    </ol>
+  </div>
+  <hr></hr>
+  <br/>
   <h2>Where should i start ?</h2>
   <br/>
   <div class="tabbed">
