--- a/faq.html
+++ b/faq.html
@@ -8,9 +8,12 @@ title:	"FAQ"
   <div class="tabbed">
     <ol>
       <li><a href="">Where should i start ?</a></li>
+      <li><a href="">How can i write my solution ?</a></li>
       <li><a href="">Programming language selection</a></li>
+      <li><a href="">My algorithm is ready, how to submit it ?</a></li>
     </ol>
   </div>
+  <br/>
   <hr></hr>
   <br/>
   <h2>Where should i start ?</h2>
@@ -22,6 +25,18 @@ title:	"FAQ"
       <tt>Jammy > Select contest</tt>. Authentification with your Google Account will be requested.
     </p>
   </div>
+  <br/>
+  <hr></hr>
+  <br/>
+  <h2>How can i write my solution ?</h2>
+  <br/>
+  <div class="tabbed">
+    <p>
+      When a contest is selected, the <tt>Context Explorer</tt> view shows each problem instance available.
+      Double click on a problem or using contextual menu <tt>Open problem solver</tt>.
+    </p>
+  </div>
+  <br/>
   <hr></hr>
   <h2>Programming language selection</h2>
   <br/>
@@ -33,8 +48,6 @@ title:	"FAQ"
       <tt>Preference > Jammy</tt> and select it through the proposed drop down
       list.
     </p>
-    <br/>
-    <img class="img-responsive center" src="images/preferences.png" />
     <br/>
     <h3>Supported language(s)</h3>
     <p>Here is a list of known language supported by Jammy :</p>
@@ -49,6 +62,17 @@ title:	"FAQ"
       You need another language ? Try to integrate it using the
       <a href="https://github.com/Faylixe/review.classdesign.jammy/wiki/Adding-language-support-to-Jammy" target="_blank">Language extension API</a>
       and we will add it to this list !
+    </p>
+  </div>
+  <br/>
+  <hr></hr>
+  <br/>
+  <h2>My algorithm is ready, how to submit it ?</h2>
+  <br/>
+  <div class="tabbed">
+    <p>
+      You can use the contextual menu on any problem you are working on to submit your solution. Right click on your problem in the <tt>Context explorer</tt> view,
+      and select <tt>Submit</tt>.
     </p>
   </div>
 </div>
