update installation page

--- a/installation.html
+++ b/installation.html
@@ -26,7 +26,7 @@ title:	"Installation"
         </p>
         <br/>
         <div class="tabbed">
-          <p><i>http://faylixe.github.io/review.classdesign.jammy/update</i></p>
+          <p><i>-Not available yet-</i></p>
         </div>
         <br/>
         <p>
