update installation page

--- a/faq.html
+++ b/faq.html
@@ -7,15 +7,15 @@ title:	"FAQ"
   <br/>
   <div class="tabbed">
     <ol>
-      <li><a href="">Where should i start ?</a></li>
-      <li><a href="">How can i write my solution ?</a></li>
-      <li><a href="">Programming language selection</a></li>
-      <li><a href="">My algorithm is ready, how to submit it ?</a></li>
+      <li><a href="#question1">Where should i start ?</a></li>
+      <li><a href="#question2">How can i write my solution ?</a></li>
+      <li><a href="#question3">Programming language selection</a></li>
+      <li><a href="#question4">My algorithm is ready, how to submit it ?</a></li>
     </ol>
   </div>
   <br/>
   <hr></hr>
-  <h2>Where should i start ?</h2>
+  <h2 id="question1">Where should i start ?</h2>
   <br/>
   <div class="tabbed">
     <p>
@@ -26,7 +26,7 @@ title:	"FAQ"
   </div>
   <br/>
   <hr></hr>
-  <h2>How can i write my solution ?</h2>
+  <h2 id="question2">How can i write my solution ?</h2>
   <br/>
   <div class="tabbed">
     <p>
@@ -36,7 +36,7 @@ title:	"FAQ"
   </div>
   <br/>
   <hr></hr>
-  <h2>Programming language selection</h2>
+  <h2 id="question3">Programming language selection</h2>
   <br/>
   <div class="tabbed">
     <p>
@@ -64,7 +64,7 @@ title:	"FAQ"
   </div>
   <br/>
   <hr></hr>
-  <h2>My algorithm is ready, how to submit it ?</h2>
+  <h2 id="question4">My algorithm is ready, how to submit it ?</h2>
   <br/>
   <div class="tabbed">
     <p>
