Updates installation page

--- a/installation.html
+++ b/installation.html
@@ -26,7 +26,7 @@ title:	"Installation"
         </p>
         <br/>
         <div class="tabbed">
-          <p><i>-Not available yet-</i></p>
+          <p><i>http://faylixe.fr/jammy/update</i></p>
         </div>
         <br/>
         <p>
@@ -50,7 +50,7 @@ title:	"Installation"
         <br/>
         <p>
           You can also directly download plugin from
-          <a href="https://github.com/Faylixe/review.classdesign.jammy/releases" target="_blank">here</a>,
+          <a href="https://github.com/Faylixe/jammy/releases" target="_blank">here</a>,
           and move it to <a href="http://eclipse.org" target="_blank">Eclipse</a> plugin directory.
         </p>
       </div>
