--- a/installation.html
+++ b/installation.html
@@ -11,6 +11,8 @@ title:	"Installation"
       <a href="https://www.java.com/fr/download/faq/java8.xml" target="_blank">Java 8</a>
       and <a href="https://eclipse.org/luna/" target="_blank">Eclipse Luna</a>
     </p>
+    <p>Linux users will have some issues with Eclipse integrated webbrowser if they use GTK,
+    see <a href="https://github.com/Faylixe/jammy/issues/26">here</a> for more details</p>
 </div>
 
 <div class="blued">
