--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@ title:	"FAQ"
       <h4>Java</h4>
       <p>Java is the default language supported by Jammy. Indead Jammy is coded in Java, for a Java first based IDE.</p>
       <br/>
-      <h4>Python &new;</h4>
+      <h4>Python</h4>
       <p>Python is supported using the Python addon from update site, which is shipped with <a href="www.pydev.org">PyDev</a></p>
     </div>
 
