--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,10 @@ title:	"FAQ"
       <p>Java is the default language supported by Jammy. Indead Jammy is coded in Java, for a Java first based IDE.</p>
       <br/>
       <h4>Python</h4>
-      <p>Python is supported using the Python addon from update site, which is shipped with <a href="www.pydev.org">PyDev</a></p>
+      <p>Python is supported using the Python addon from update site, which is shipped with <a href="www.pydev.org">PyDev</a>.</p>
+      <br/>
+      <h4>Lua</h4>
+      <p>As for python, Lua addons is available and shipped with Eclipse Lua Development Tools.</p>
     </div>
 
     <br/>
