--- a/faq.html
+++ b/faq.html
@@ -59,7 +59,7 @@ title:	"FAQ"
       <p>Python is supported using the Python addon from update site, which is shipped with <a href="www.pydev.org">PyDev</a>.</p>
       <br/>
       <h4>Lua</h4>
-      <p>As for python, Lua addons is available and shipped with Eclipse Lua Development Tools.</p>
+      <p>As for python, Lua addon is available and shipped with Eclipse Lua Development Tools.</p>
     </div>
 
     <br/>
